# tinywargame

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: agent.hpp  base_decorator.hpp  mmanager.hpp
observer_decorate/include/: agent.hpp  definition.hpp  simple_decorator.hpp  stochastic_decorator.hpp
observer_decorate/src/: agent.cpp  app.cpp  mmanager.cpp
src/: app.cpp
